<resources>
    <string name="app_name">Restaurant-Picker</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title">Welcome to the Restaurant Picker!</string>
    <string name="distance">Distance:</string>
    <string name="i_e_5_miles_10_miles">i.e. 5 miles, 10 miles</string>
    <string name="price">Price:</string>
    <string name="title_activity_maps_places">MapsActivityPlaces</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_maps_geo">MapsActivityGeo</string>
    <string name="button_send" />
    <string name="Add" />
    <string name="button_add" />
    <string name="go" />
    <string name="Yes" />
    <string name="add">Add</string>
    <string name="pick">Find me Food!</string>
    <string name="add2" />
    <string name="add3" />
    <string name="second_fragment_label" />
    <string name="first_fragment_label" />
    <string name="search_history" />
    <string name="save_history" />
    <string name="visibility" />
    <string name="displayname_title" />
    <string name="Profile_Options" />
    <string name="save_all" />
    <string name="save_30" />
    <string name="keep_length" />
    <string name="title_activity_favourites" />
    <string name="close">Close</string>
    <string name="website">Go to website</string>
    <string name="directions">Get Directions</string>
    <string name="startOver">Start Over</string>
</resources>