<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    tools:layout="@layout/activity_maps">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:onClick="onClick"
        android:clickable="true" />
    <Button
        android:id="@+id/addButton2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:visibility="gone"
        android:onClick="onClick"
        android:clickable="true" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:visibility="gone"
        android:onClick="onClick"
        android:clickable="true" />

    <Button
        android:id="@+id/website"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:visibility="gone"
        android:onClick="onClick"
        android:clickable="true" />

    <Button
        android:id="@+id/directions"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:visibility="gone"
        android:onClick="onClick"
        android:clickable="true" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startOver"
        android:visibility="gone"
        android:onClick="onClick"
        android:clickable="true" />

</fragment>
<!--    android:background="@android:color/darker_gray"-->
<!--    android:layout_alignParentTop="true"-->
<!--    android:layout_alignParentEnd="true"-->
<!--    android:textColor="@android:color/black"-->
<!--    android:padding="8dp"-->
<!--    android:layout_margin="5dp"-->